[gd_scene load_steps=2 format=3 uid="uid://b1euqol68scpi"]

[ext_resource type="Script" path="res://components/interactable_component.gd" id="1_alxbk"]

[node name="InteractableComponent" type="Area3D"]
script = ExtResource("1_alxbk")

[connection signal="is_interacted" from="." to="." method="_on_is_interacted"]
